@@ -27,13 +27,9 @@ import org.labkey.api.audit.AuditLogService;
 import org.labkey.api.audit.AuditTypeEvent;
 import org.labkey.api.audit.provider.FileSystemAuditProvider;
 import org.labkey.api.collections.CaseInsensitiveHashSet;
-import org.labkey.api.data.RuntimeSQLException;
 import org.labkey.api.data.SimpleFilter;
 import org.labkey.api.data.TableInfo;
-import org.labkey.api.data.TableSelector;
-import org.labkey.api.exp.ObjectProperty;
 import org.labkey.api.exp.api.ExpData;
-import org.labkey.api.exp.api.ExperimentService;
 import org.labkey.api.exp.property.Domain;
 import org.labkey.api.exp.property.DomainProperty;
 import org.labkey.api.exp.property.PropertyService;
@@ -51,8 +47,6 @@ import org.labkey.api.security.User;
 import org.labkey.api.security.UserManager;
 import org.labkey.api.security.roles.CanSeeAuditLogRole;
 import org.labkey.api.security.roles.ReaderRole;
-import org.labkey.api.security.roles.Role;
-import org.labkey.api.security.roles.RoleManager;
 import org.labkey.api.util.ConfigurationException;
 import org.labkey.api.util.FileStream;
 import org.labkey.api.util.FileUtil;
@@ -73,12 +67,10 @@ import java.nio.file.Files;
 import java.nio.file.InvalidPathException;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.nio.file.attribute.FileTime;
-import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -88,12 +80,8 @@ import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
 /**
-* User: matthewb
-* Date: Oct 21, 2008
-* Time: 10:00:49 AM
-*
-*   Base class for file-system based resources
-*/
+ *  Base class for file-system based resources
+ */
 public class FileSystemResource extends AbstractWebdavResource
 {
     private static final Logger _log = LogManager.getLogger(FileSystemResource.class);
@@ -287,10 +275,10 @@ public class FileSystemResource extends AbstractWebdavResource
         boolean created = false;
         if (!file.exists())
         {
-            file.getParentFile().mkdirs();
+            FileUtil.mkdirs(file.getParentFile());
             try
             {
-                file.createNewFile();
+                FileUtil.createNewFile(file);
                 created = true;
             }
             catch (IOException x)
@@ -616,10 +604,7 @@ public class FileSystemResource extends AbstractWebdavResource
         filter.addCondition(FieldKey.fromParts(FileSystemAuditProvider.COLUMN_NAME_FILE), file.getName());
 
         // Allow all users to see history in the container
-        HashSet<Role> roles = new HashSet<>();
-        roles.add(RoleManager.getRole(ReaderRole.class));
-        roles.add(RoleManager.getRole(CanSeeAuditLogRole.class));
-        User user = new LimitedUser(UserManager.getGuestUser(), new int[0], roles, true);
+        User user = new LimitedUser(UserManager.getGuestUser(), ReaderRole.class, CanSeeAuditLogRole.class);
 
         List<AuditTypeEvent> logs = AuditLogService.get().getAuditEvents(getContainer(), user, FileSystemAuditProvider.EVENT_TYPE, filter, null);
         if (null == logs)
@@ -627,8 +612,8 @@ public class FileSystemResource extends AbstractWebdavResource
 
         List<WebdavResolver.History> history = new ArrayList<>(logs.size());
         history.addAll(logs.stream()
-                .map(e -> new HistoryImpl(e.getCreatedBy().getUserId(), e.getCreated(), e.getComment(), null))
-                .collect(Collectors.toList()));
+            .map(e -> new HistoryImpl(e.getCreatedBy().getUserId(), e.getCreated(), e.getComment(), null))
+            .toList());
         return history;
     }
 
